--- a/frontend/Brand/src/styles/Brands.css
+++ b/frontend/Brand/src/styles/Brands.css
@@ -14,8 +14,22 @@
     min-width: calc(20% - 1rem);
 }
 
-.brand-logo img {
+/* .brand-logo img {
     max-width: 100%;
     height: auto;
     display: block;
+} */
+
+@media (max-width: 768px) {
+    .brand-logo {
+        max-width: calc(33.33% - 1rem);
+        min-width: calc(33.33% - 1rem);
+    }
+}
+
+@media (max-width: 576px) {
+    .brand-logo {
+        max-width: calc(50% - 1rem);
+        min-width: calc(50% - 1rem);
+    }
 }
