--- a/frontend/Brand/src/styles/CaseStudies.css
+++ b/frontend/Brand/src/styles/CaseStudies.css
@@ -1,9 +1,11 @@
 .case-studies {
     padding: 2rem 4rem;
+    align-content: center;
+    justify-content: space-around;
 }
 .case-study-list {
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     /* gap: 20px; */
 }
 
