--- a/frontend/Brand/src/styles/CaseStudies.css
+++ b/frontend/Brand/src/styles/CaseStudies.css
@@ -3,16 +3,21 @@
     align-content: center;
     justify-content: space-around;
 }
+
 .case-study-list {
     display: flex;
-    justify-content: space-around;
-    /* gap: 20px; */
+    overflow-x: auto;
 }
 
 .case-study {
-    /* width: calc(33%); */
-    padding: 0.2rem; 
+    padding: 0.2rem;
     position: relative;
+    flex: 0 0 auto;
+    width: 100%;
+}
+
+.case-study img {
+    max-width: 100%;
 }
 
 .case-study-info {
@@ -29,4 +34,16 @@
 
 .case-study-description {
     font-size: 1.2rem;
+}
+
+@media (min-width: 768px) {
+    .case-study {
+        width: calc(50% - 1rem);
+    }
+}
+
+@media (min-width: 992px) {
+    .case-study {
+        width: calc(33% - 1rem);
+    }
 }
